2005-03-09  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm term/gd.trm term/pdf.trm term/pm.trm term/post.trm
	term/svg.trm term/x11.trm src/gplt_x11.c src/gplt_x11.h:
	Modify term->set_color() to handle colorspec type LC_LT.
	This has the effect of changing the current line color to that of
	default linetype <lc> without changing any other line properties.

	* misc.c (lp_parse) save.c (save_set_all) show.c (show_linestyle)
	docs/gnuplot.doc:
	Allow line color {linecolor|lc} to be specified separately from the
	linetype. For example, this command will give a dashed black line:
	    set style line 1 lt 2 lc -1
	and the following will give a dashed gold line:
	    plot sin(x) with lines lt 2 lc rgb "gold"

	* demo/dashcolor.dem: Demo of choosing both linetype (dot/dash pattern)
	and linecolor separately.

	* src/misc.c (arrow_parse): Bugfix: Keep current linetype as the default
	when parsing possible additional line style options.

2005-03-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline) src/misc.c (parse_colorspec): 
	Clean up code to remove the remaining 2 compiler warnings in current cvs.

2005-03-05  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm (PS_options): Patch #1121971. Avoid external 
	processing of escaped characters in the epslatex header string.

2005-03-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline): Plug a memory leak caused by evaluating
	a string-valued expression inside a "using" specification.

	* configure.in /config/config.amg /config/config.cyg /config/config.mgw
	/config/config.os2 /src/eval.c /src/eval.h /src/internal.c
	/src/internal.h /src/parse.c /src/standard.c /src/standard.h:

	Remove configuration option --disable-defined-var.
	Remove the #ifdef GP_ISVAR ... #endif bracketing the corresponding code.

	* term/cgm.trm (CGM_linecolor): Force all line and point color requests
	to black if the terminal is in monochrome mode. Bug fix courtesy of 